:bug: fix title too big

--- a/inte/scss/base/_base.scss
+++ b/inte/scss/base/_base.scss
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h1, h3, h5, h6{
-    @include avalonBold(6rem);
+    @include avalonBold(5.5rem);
 }
 
 h1{
