--- a/inte/scss/layout/_content.scss
+++ b/inte/scss/layout/_content.scss
@@ -142,7 +142,7 @@
             left: 0;
             position: absolute;
             top: 0;
-            transform: translateX(-70%);
+            transform: translateX(-75%);
             z-index: 2;
         }
         .video{
